# skills.ugrasu.ru

./: .gitignore  .gitlab-ci.yml  404.html  CNAME  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  Документ Microsoft Word.docx
docs/: index.md  partners.md  start_point_link.md
docs/start_point/: employment_for_region.md  ktc.md  project_1.md  project_1_result.md  project_oop.md  reference.md  targeted_admission.md  wordsktls_2018_result.md  work_human.md
docs/start_point/other/: bd.md  prof.md  tz_1.md
docs/start_point/other/bd/: bd.doc
docs/start_point/project_1_result/: project_1_result_chart1.js  project_1_result_chart2.js  project_1_result_chart3.js  project_1_result_chart4.js  project_1_result_chart5.js
docs/start_point/work_human/: button.css  pdf_render.js
partners/: index.html
search/: search_index.json
start_point/employment_for_region/: index.html
start_point/ktc/: index.html
start_point/other/bd/: index.html
start_point/other/prof/: index.html
start_point/other/tz_1/: index.html
start_point/project_1/: index.html
start_point/project_1_result/: index.html  project_1_result_chart1.js  project_1_result_chart2.js  project_1_result_chart3.js  project_1_result_chart4.js  project_1_result_chart5.js
start_point/project_oop/: index.html
start_point/reference/: index.html
start_point/targeted_admission/: index.html
start_point/targeted_admission/css/: mermaid.css
start_point/wordsktls_2018_result/: index.html
start_point/work_human/: button.css  index.html  pdf_render.js
start_point_link/: index.html
(+3 files in other folders)
