[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["Kross <pyro-bot@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.0"
mkdocs-material = "^4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
